# ChangeLog for app-arch/sharutils
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/sharutils/ChangeLog,v 1.100 2013/03/01 12:37:12 ago Exp $

  01 Mar 2013; Agostino Sarubbo <ago@gentoo.org> sharutils-4.13.3.ebuild:
  Stable for sh, wrt bug #457220

  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sharutils-4.13.3.ebuild:
  Stable for ia64, wrt bug #457220

  20 Feb 2013; Jeroen Roovers <jer@gentoo.org> sharutils-4.13.3.ebuild:
  Stable for HPPA (bug #457220).

  20 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sharutils-4.13.3.ebuild:
  Stable for s390, wrt bug #457220

  15 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sharutils-4.13.3.ebuild:
  Stable for alpha, wrt bug #457220

  15 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sharutils-4.13.3.ebuild:
  Stable for sparc, wrt bug #457220

  15 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sharutils-4.13.3.ebuild:
  Stable for arm, wrt bug #457220

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sharutils-4.13.3.ebuild:
  Stable for ppc, wrt bug #457220

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sharutils-4.13.3.ebuild:
  Stable for ppc64, wrt bug #457220

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sharutils-4.13.3.ebuild:
  Stable for x86, wrt bug #457220

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sharutils-4.13.3.ebuild:
  Stable for amd64, wrt bug #457220

*sharutils-4.13.3 (12 Jan 2013)

  12 Jan 2013; Tim Harder <radhermit@gentoo.org> +sharutils-4.13.3.ebuild:
  Version bump.

  02 Jan 2013; Tim Harder <radhermit@gentoo.org> sharutils-4.13.1.ebuild:
  Remove empty RDEPEND.

*sharutils-4.13.1 (02 Jan 2013)

  02 Jan 2013; Tim Harder <radhermit@gentoo.org> +sharutils-4.13.1.ebuild:
  Version bump.

  06 Jul 2012; Mike Frysinger <vapier@gentoo.org>
  +files/sharutils-4.11.1-no-gets.patch, sharutils-4.11.1.ebuild:
  Fix building with glibc-2.16 #424994 by Stevan Bajić.
