@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX sharutils-4.11.1-no-gets.patch 816 SHA256 d7b16414b6da9babe28dba56a42ef7f5b0aa10a9bcd55d069ccdade32076e7ec SHA512 8bf93fa30a02bc5d084c2aa85d148ab9c3f1ee67745824d0408130d79a68cc07e0cda14e7d748433e2d4901a4d7661f97c6a67c805623ef6de24baaff71b3777 WHIRLPOOL e3721a0b7518444778bdc8640b65f7c5d0827e48e14171567426e250850639a498d677f705f779f4d5077381a395f00bbb09fe87908196ee314034d0b4326d27
 AUX sharutils-4.6.3-interix.patch 473 SHA256 95bc9ffbc335e4ac0f5fc8d598be1907d0e66f74b09e5a104476935458ebf453 SHA512 f46bf32ae5119f6453d65306553a6540476c08fd55abafad1f4bc13e6028c57a1e1e71bdffa7c60ff57dd639212336b83179752654dc0f6d31fa959409f4a4bc WHIRLPOOL 904fabf1a913562ce7d23234d9e6761504fdaffa3442a48771648fe1f362af4d12b7576e4fcd3f8548707317758f019765a7ac2a8ec6feb85df724022f024a46
@@ -8,27 +8,23 @@ DIST sharutils-4.11.1.tar.bz2 1000885 SHA256 6f48ed90b7e27046addaded1e6b434c7c41
 DIST sharutils-4.11.tar.bz2 956779 SHA256 3ee2e683000fedf70d6912d4939617a290b5ecc4a45d249b9cd54d8bc1c6c667
 DIST sharutils-4.13.1.tar.bz2 1226061 SHA256 8c055f125ed85bb90747b62448907e78534d83afaf1077638698c233140fd468 SHA512 46eeecc4fbd664e1077e4f1138b9de2338449e1afa5b1d2fc7ee4ce640e92903c20d4e8fc0dbc341edba19cbbded9ec947b5976f5cfcdd389ef0ba162cddde05 WHIRLPOOL c6d10bdad4c244ee9ef37fb1fbb96ce379a82d027d4614c23fd04f6b85113f90bb65cde7ac58048b53a7fb1559e1390f22711253f724ae23299712b872073bc2
 DIST sharutils-4.13.3.tar.xz 962200 SHA256 871fe6e7e00b1de159f47d2e3bd1fb46c3d21ec6ba305f73e339402a8809c295 SHA512 0687ae7958921d6b365c9f055148a2f2263af30ef5729295ef39b3216ad539adfff09e0c996551f1fcf96ae58da50f5e576db74bd9724077429571eed42cf4b9 WHIRLPOOL d48f2b797a62dfe103a29ccda4694869e6139b8eab930404dd678631898a197060ed95d2c581796e4a653a7037dd42a4f02a2b155a4b45a14bf4f1edab0dc810
+DIST sharutils-4.13.4.tar.xz 1019168 SHA256 ba0a1aab3ac831724c0ae09089c8835757c546e35e78294916716b38cd0d7ba6 SHA512 a78297bb251b23e148f5b0efa3ffe2dd2d35698d44644b15e1ed5771cb34365dcffed594ea058b004b1d8a879784b6f96df8b36447a9172819959c4d265dc74c WHIRLPOOL d75e8de9886e148998839dfef7e7c59ed495f2f257f1de2aa7fc1bbd14a1a6e026740b206ef330148a310ad6a729437f97f196e6ce4c39d2cc9b99a88a06911c
 EBUILD sharutils-4.10.ebuild 888 SHA256 e1b948dd2c87660e463bd160e07f89ad899c9392d117851ad2bbabcdd09eb2e2 SHA512 8771da838e1ba36357263083a4fe29ccaedcb922bfc2635f9c7bd666af9e1c2155d575dc67e6d4a826372329020cf9f9e8ffe6d1f78c6c73bb2f08154aaec28a WHIRLPOOL b801dec9eb376c222fb5191567aada5cba58ea79bdadd2bca74b5c4827a747b7dc2d6cdfd8b64163035d32ff8a434b5a542da7a25adbaf39e8e54bf36fcfd3f4
 EBUILD sharutils-4.11.1.ebuild 952 SHA256 a6376461d5fc46fa20927ccef6c3e2ed9b360e40467501ac355fe60a8e5beb9e SHA512 0159fd7535e25674b147948d0563b04a00fb3854cf1773c938c569b0c24a544e9e0f030eb8967f5400e1d8d227ded37e1fc95d784a4050c394f2d0684a67b32c WHIRLPOOL b7f287aa1e80b775f9481b34c609d1ffa64e5bc8466bd9b0789068d133604c85d82916ca0b2949c758788438c31dd0d94ce1092419d3b967b4ddc40b2325b9e7
 EBUILD sharutils-4.11.ebuild 891 SHA256 abb9b5dd3370ea3006c46c145f7fbd5e3a8e2d8438b35d7778aa3ffe4d866c34 SHA512 15f9c0f1c79134d4b54df988c957858292ac1e26addc50cb3faafeb4238a190e222a96324f747984747c65cd87f0fcec9fa0c235fb089c9edd1562d65ef57caa WHIRLPOOL 19e9eee520b85a29987ecdae3ef728b2ea182eec97a015727d24609b0972c4326ff07e173866b423f424b7238fb31326d8c3659a36bd0ea24cad74e1406e1b4c
 EBUILD sharutils-4.13.1.ebuild 782 SHA256 e7626922111c6dd98905feee392e09b754cb33bc73d9ed1773b8b9c63c8fa9ef SHA512 324e096f77083a1f696acf8e98d3251f30f79f3b5d2c723f7be35cc6c0a313fb12ef7733eb9959627147985866322dbb63b179d3d4074d6c830a1cefeb701596 WHIRLPOOL 7b4bf32a208bbfb26c7899c14abe25cc57b42ff46fb0747075bb33a8961d5d08d85d1897b95e3c4e0a4010c470619446407e447e4063fb63f76062886fdf6e85
 EBUILD sharutils-4.13.3.ebuild 765 SHA256 17973cf56c6a54b1aca506f6a231b0f86799bb010685b479a1e2a8bb34f7574b SHA512 5b78130f3fe78c651c8447b9d40040d7f0f2209d57832b8b67ae2d37c092f232b3a1f02613587a4efb6f1343b0f4c219b886d0c35f79499ebc9b506322c4b4ec WHIRLPOOL cee7953508513d7b2f8cfcdcccf4cf5dc1e6b2152a499aabc186d59f2ae894e063e154b6df305bbb6296f33f158bb6b41c59ffbeb46cd6acfe75d7de4401a5e5
-MISC ChangeLog 14624 SHA256 f22d83862a51ec12c500b0aa116cb9b1631d6b5924382b8d28dfc1e301a50043 SHA512 edafcdd0926b5bd54d99adbfaf6d34d23217ae762e4cf3d31826113a5ce167ca9c14ff7d3d81e82212cedcdee6fdc5d964ac6f49ca86cc0a6533bfb65939e056 WHIRLPOOL 3f7f9bffa38e00bb45ba435f6798c8d1a58663464d25b861e4ad3462abe9b4f3fda073b138d188274d8f04895912d2f12c89853d7538f9ad24c09277410f645f
+EBUILD sharutils-4.13.4.ebuild 800 SHA256 15c29549ad0ae333703530cea86a1c544a9fd051ca01a8b1ef34dc4ca83ceffc SHA512 1af28a22a70387fe76276b76cc92aef5419020a17903225e99177438af789f1b5fa61690ac8b2d48cbef549ea00550b5e5bb53bf9f20ae5f1a4fbc54bb18a479 WHIRLPOOL 6f7eea4aff8d99fb6b694d776c0b8169f9fff1fb06f1a444833b54e9d1130d079bd1256ba391b5ce2cf501b0cfb6270454d3f64005844868c2604a0d1fc51999
+MISC ChangeLog 14755 SHA256 d6b799d5c45ed071b5f0840297a60a275215150c3e9822d61482282b6c0fd3ca SHA512 2a2fb06bf0e88b1f11f6827cc51cdafb676a97e597a461e2d45a0307a2dd806cb3521e3841788ac271a028879342e59bb9694e88f33a48b8844ca54ed5743d95 WHIRLPOOL 716d13f468735ec280e6435bc2855a0b7e5d3e0934e6f675630ede0ef8f889881f0ccb6bf6dbd73f97bfa17a58f04c42f16f0298d2c7cc8e5200d789d6a05838
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRMKBvAAoJELp701BxlEWfkJYQAKUWLXcqO84URuBRYlwIadvx
-l2b+1yoJ3Lw/LWWMeOQrO9XTNYgyurUGpaQMyrAcMK3xDR5R5Ye7ZNWtZwdNsWoG
-u8czmb4aeKP1SwQFrkNWGamipCq44i5D3VYMm169PDU8u2yDqMZiWO5zi/8+bG7n
-zrpGnq0BxgmMlOl7XFExEDk47/JoGGlg29ePFd2HncyG2kEjWeV/4/gc1WssF/bQ
-b+P3Lm0TzwE4vMY7mwg6glF8gHx4PtK4uI7577TFiWK09nsyHzIatwUx5Or6AA7+
-63S7ylDd1EZWz5yoNugCxv5P6Fo2js6OC4l0pq9gDvQ14tkRQatIFFGUSz02T7im
-FGkYJaA/sMiXu2LSjHPNgBmXozkU3HsPdTHEU4HA/dnJYli66fk2PHR45/cUIo60
-4CYv3n7paLBwbjc0rsA5GQ/37qqSvtr7K3ZdH9Sa3251AcHWq7eYcO8eFWk3UTbK
-FJXPqIlHH/AzRI/3/iJLUCxoWsPlHish9v3CPKfmmWUWAFowbwBCSQ1rIVZoJ+vx
-uWLc8kyJQcqS7YMbbIFoGlA7xOW0RpvMhPPdx6G1FejNoPLN676Cf5GHPScG9atP
-9gWve85GtA5Gt0Iiy/aQgSh5LL03j4aZ2CbO/DxFg6OsYf5vw+AM7PEdrj0YbEwh
-HYZDJm7O2K2AwsW8mABY
-=6tGU
+iQEcBAEBCAAGBQJRWm4bAAoJEEqz6FtPBkyjStYH/1GD8a6hXiyiO8ZpKrJnLg2P
+a/IAcqutqSxBZHFAnOHUKIYCNsgKHtnCOPxEaQqiKIsLSEB1+Ke9kluOuM0JkxAc
+XycKIyZuO3ALc2pgfbvmRjbti9OO7lAhnwyiH9Gmnf06nzq9h1aWNiwqGrAicAz1
+pufEJ4yQG6VOX8nsGubQjOhD+nMoywfLqfD0kmwKkWh/y7OIJdLoFzSngO0eagdx
+EZ/+SWbZYgyK2eAbkVCa45igbwVGulfgTNxQbHlE/oTFtY4L+Vq+xgtUIBzIb9qX
+yAJ4r7DaGNt8lk+82PDgouzBtaRTfF7HAmgTxHAj/0W6vJ/MtAvTwchjegvMWMc=
+=niXs
 -----END PGP SIGNATURE-----
